--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
+.val-table{
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  max-width: 900px;
+  margin: 30px auto;
+  padding: 10px 30px 30px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px grey;
+  background-color: #fefefe;
+  overflow-y: auto;
+}
+
+table{
+  display: block;
+  max-width: 99%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+td{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+tr:nth-child(even) {
+  background-color: #dddddd;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.avatar{
+  min-width: 30px;
+  width: 40%;
+  border-radius: 50%;
 }
