--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,38 @@
-.val-table{
-  display: flex;
-  flex-direction: column;
-  align-items:center;
-  max-width: 900px;
-  margin: 30px auto;
-  padding: 10px 30px 30px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px grey;
-  background-color: #fefefe;
-  overflow-y: auto;
+.val-table {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 900px;
+    margin: 30px auto;
+    padding: 10px 30px 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px grey;
+    background-color: #fefefe;
+    overflow-y: auto;
 }
 
-table{
-  display: block;
-  max-width: 99%;
+table {
+    display: block;
+    max-width: 99%;
 }
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
+td,
+th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
 }
 
-td{
-  text-align: center;
+td {
+    text-align: center;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+    background-color: #dddddd;
 }
 
-.avatar{
-  min-width: 30px;
-  width: 40%;
-  border-radius: 50%;
+.avatar {
+    min-width: 30px;
+    width: 40%;
+    border-radius: 50%;
 }
